Page MenuHome GnuPG

pressing the [x] button sends a key to the key server instead of cancelling the send.
Closed, ResolvedPublic

Description

steps to reproduce

  1. create a key

1.1 open GPA

  1. go to the key manager
  1. open 'detailed view'
  1. right click on your key and select 'send keys...' sub-menu
  1. you must see a box now that says "The selected key will be sent to a public

key server ("hkp://keys.gnupg.net";). Are you sure
you want to distribute this key? [Yes] [No]

  1. do not press either 'yes' or 'no' but go to the next step
  1. press the [x] button at the top right corner of the textbox -- just to close

the textbox.

  1. the next textbox appears saying: "GPA Message" "The keys have been sent to

the server"

This is a critical bug as I did not want my keys to be public. Yet now they ARE.

Thank you very much for the software anyway.

Details

Due Date
Jan 15 2014, 1:00 AM
Version
0.9.4

Event Timeline

ohmy set Version to 0.9.4.
ohmy added a subscriber: ohmy.

Interesting. Thanks for reporting.

werner raised the priority of this task from Normal to High.Jan 8 2014, 7:43 PM
werner set Due Date to Jan 15 2014, 1:00 AM.

Fixed with commit 071ed43. Will go into 0.9.8.

Sorry for delaying it for so long.

werner claimed this task.