Fix handling of the windows close button in confirmation dialogs.

* src/gpaexportserverop.c (confirm_send): Only act upon the Yes button.
* src/confdialog.c (gpa_configure_keyserver): Ditto.
* src/gpgmetools.c (check_overwriting): Ditto.
--

Checking for GTK_RESPONSE_NO was a bad idea because that catches only
the No button and no other events, like the window's close button.

GnuPG-bug-id: 1599