src/confdialog.c
@@ -1591,7 +1591,7 @@ gpa_configure_keyserver (GtkWidget *parent)
   gtk_dialog_add_buttons (GTK_DIALOG (msgbox),
                           _("_Yes"), GTK_RESPONSE_YES,
                           _("_No"), GTK_RESPONSE_NO, NULL);
-  if (gtk_dialog_run (GTK_DIALOG (msgbox)) == GTK_RESPONSE_NO)
+  if (gtk_dialog_run (GTK_DIALOG (msgbox)) != GTK_RESPONSE_YES)
     {
       gtk_widget_destroy (msgbox);
       return NULL;
