src/gpgmetools.c
@@ -174,7 +174,7 @@ check_overwriting (const char *filename, GtkWidget *parent)
       gtk_dialog_add_buttons (GTK_DIALOG (msgbox),
 			      _("_Yes"), GTK_RESPONSE_YES,
 			      _("_No"), GTK_RESPONSE_NO, NULL);
-      if (gtk_dialog_run (GTK_DIALOG (msgbox)) == GTK_RESPONSE_NO)
+      if (gtk_dialog_run (GTK_DIALOG (msgbox)) != GTK_RESPONSE_YES)
 	{
 	  gtk_widget_destroy (msgbox);
 	  return FALSE;
